Add extern "C" blocks to engine version header

--- a/UAssetAPI-DNNE/src/templates/EngineVersion.liquid
+++ b/UAssetAPI-DNNE/src/templates/EngineVersion.liquid
@@ -3,6 +3,10 @@
 #ifndef UASSETAPI_DNNE_ENGINEVERSION
 #define UASSETAPI_DNNE_ENGINEVERSION
 
+#ifdef __cplusplus
+extern "C"
+#endif
+
 enum EngineVersion
 {
 {%- for ev in EngineVersions %}
@@ -11,3 +15,7 @@ enum EngineVersion
 };
 
 #endif // UASSETAPI_DNNE_ENGINEVERSION
+
+#ifdef __cplusplus
+}
+#endif
